--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "aws-data-science",
   "version": "0.1.0",
   "description": "Basic Building Blocks for Data Scientist analyzing AWS cloud platforms",
-  "main": "index.js",
+  "main": "dist/src/index.js",
   "scripts": {
-    "build": "rm -rf dist && coffee --transpile --inline-map -o dist -c src",
-    "pretest": "npm run build",
-    "test": "mocha dist/test/**/*.js"
+    "build": "tsc",
+    "test": "mocha --opts test/mocha.opts",
+    "test:watch": "mocha --opts test/mocha.opts --watch"
   },
   "keywords": [
     "aws",
@@ -22,14 +22,18 @@
   "license": "LGPL-3.0",
   "devDependencies": {
     "@types/lodash": "^4.14.103",
+    "@types/mocha": "^2.2.48",
+    "@types/node": "^9.4.6",
     "aws-sdk": "^2.196.0",
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2017": "^6.24.1",
     "chai": "^4.1.2",
-    "coffeescript": "^2.2.1",
-    "mocha": "^5.0.1"
+    "mocha": "^5.0.1",
+    "mocha-typescript": "^1.1.12",
+    "source-map-support": "^0.5.3",
+    "ts-node": "^4.1.0",
+    "tsconfig-paths": "^3.1.1",
+    "tslint": "^5.9.1",
+    "tslint-config-prettier": "^1.8.0",
+    "typescript": "^2.7.2"
   },
   "dependencies": {
     "lodash": "^4.17.5",
