--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Maximilian Stroh <hisako1337@gmail.com>",
   "license": "LGPL-3.0",
   "devDependencies": {
+    "@types/chai": "^4.1.2",
     "@types/lodash": "^4.14.103",
     "@types/mocha": "^2.2.48",
     "@types/node": "^9.4.6",
