--- a/package.json
+++ b/package.json
@@ -1,47 +1,55 @@
 {
-  "name": "aws-data-science",
-  "version": "0.1.0",
-  "description": "Basic Building Blocks for Data Scientist analyzing AWS cloud platforms",
-  "main": "dist/src/index.js",
-  "scripts": {
-    "build": "tsc",
-    "test": "NODE_ENV=test mocha --opts test/mocha.opts",
-    "test:watch": "NODE_ENV=test mocha --opts test/mocha.opts --watch"
-  },
-  "keywords": [
-    "aws",
-    "data",
-    "science",
-    "data-science",
-    "analytics",
-    "reporting",
-    "parsing",
-    "transforms"
-  ],
-  "author": "Maximilian Stroh <hisako1337@gmail.com>",
-  "license": "LGPL-3.0",
-  "devDependencies": {
-    "@types/chai": "^4.1.2",
-    "@types/lodash": "^4.14.103",
-    "@types/mocha": "^2.2.48",
-    "@types/node": "^6.0.100",
-    "aws-sdk": "^2.196.0",
-    "aws-sdk-mock": "^1.7.0",
-    "chai": "^4.1.2",
-    "mocha": "^5.0.1",
-    "mocha-typescript": "^1.1.12",
-    "source-map-support": "^0.5.3",
-    "ts-node": "^4.1.0",
-    "tsconfig-paths": "^3.1.1",
-    "tslint": "^5.9.1",
-    "tslint-config-prettier": "^1.8.0",
-    "typescript": "^2.7.2"
-  },
-  "dependencies": {
-    "aws-sdk": "^2.197.0",
-    "lodash": "^4.17.5",
-    "mock-fs": "^4.4.2",
-    "moment": "^2.20.1",
-    "uuid": "^3.2.1"
-  }
+    "name": "aws-data-science",
+    "version": "0.1.0",
+    "description": "Basic Building Blocks for Data Scientist analyzing AWS cloud platforms",
+    "main": "dist/src/index.js",
+    "scripts": {
+        "build": "tsc",
+        "test": "NODE_ENV=test mocha --opts test/mocha.opts",
+        "test:watch": "NODE_ENV=test mocha --opts test/mocha.opts --watch"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Anonyfox/aws-data-science.git"
+    },
+    "keywords": [
+        "aws",
+        "data",
+        "science",
+        "data science",
+        "analytics",
+        "reporting",
+        "parsing",
+        "transforms",
+        "mining",
+        "data mining"
+    ],
+    "author": "Maximilian Stroh <hisako1337@gmail.com>",
+    "license": "LGPL-3.0",
+    "devDependencies": {
+        "@types/chai": "^4.1.2",
+        "@types/lodash": "^4.14.103",
+        "@types/mocha": "^2.2.48",
+        "@types/node": "^6.0.100",
+        "aws-sdk": "^2.196.0",
+        "aws-sdk-mock": "^1.7.0",
+        "chai": "^4.1.2",
+        "mocha": "^5.0.1",
+        "mocha-typescript": "^1.1.12",
+        "mock-fs": "^4.4.2",
+        "source-map-support": "^0.5.3",
+        "ts-node": "^4.1.0",
+        "tsconfig-paths": "^3.1.1",
+        "tslint": "^5.9.1",
+        "tslint-config-prettier": "^1.8.0",
+        "typescript": "^2.7.2"
+    },
+    "dependencies": {
+        "lodash": "^4.17.5",
+        "moment": "^2.20.1",
+        "uuid": "^3.2.1"
+    },
+    "peerDependencies": {
+        "aws-sdk": "^2.196.0"
+    }
 }
