--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "aws-data-science",
-    "version": "0.2.1",
+    "version": "0.2.2",
     "description": "Basic Building Blocks for Data Scientist analyzing AWS cloud platforms",
     "main": "dist/src/index.js",
+    "types": "dist/src/index.d.js",
     "scripts": {
         "build": "rm -rf dist && tsc",
         "test": "NODE_ENV=test mocha --opts test/mocha.opts",
